UF-9516: Update invoice-cache integration